# portfolio

./: .gitignore  README.md  pyproject.toml
portfolio/: __init__.py  config.py  model.py
portfolio/static/css/: style.css
portfolio/templates/: about.html  artwork_detail.html  artworks.html  contact.html  index.html  layout.html  login.html  project_detail.html  projects.html
portfolio/templates/partials/: breadcrumb.html  hero.html
portfolio/templates/projects/: art_project.html  cs_project.html
portfolio/templates/work/: animation.html  cs.html  design.html  media.html
portfolio/templates/work-fields/: animation.html  cs.html  design.html  frontend.html  media.html  photo_video.html  ux.html
portfolio/views/: __init__.py  about.py  artworks.py  contact.py  index.py  projects.py  work.py
sql/: data.sql  data_public.sql  schema.sql
tests/app_tests/: conftest.py  test_accounts_public.py  test_post_public.py  test_scripts.py  test_style.py
tests/db_tests/: conftest.py
